# dbtips_test

./: .gitignore  README.md  backup_cached_data_and_lookup_table.sh  cache_main.py  demo.env  docker-compose.yml  remove_cached_data.sh
backend-llm/: Dockerfile  access_web.py  agent.py  (+8 more)
backend/res-immunology-automation/: README.md  TargetDossier.ipynb  TargetDossier1.ipynb  pyproject.toml
backend/res-immunology-automation/Workspace/: README.md  Sample.ipynb
backend/res-immunology-automation/res_immunology_automation/src/disease_data/: diseases_efo.jsonl  diseases_synonyms.json  diseases_to_cache.json  key_influencers.json  scimagojr-journal-2023-cleaned.csv  target_disease.json
backend/res-immunology-automation/res_immunology_automation/src/excel_export_templates/: Animal-Models-template.xltx  Model-studies-template.xltx  Patent-template.xltx  Pipeline-template-latest.xltx  RNASeq-Dataset-Template.xltx  Target-Indication-Pairs-final.xltx  Target-list-draft.xltx  Target-list-draft_v2.xltx  Target-pipline-export-template.xltx
backend/res-immunology-automation/res_immunology_automation/src/notebooks/: Target Analysis.ipynb
backend/res-immunology-automation/res_immunology_automation/src/scripts/: animal_model_excel.xlsx  api.py  api_models.py  app.py  build_dossier.py  cache_main.py  cache_management.py  cache_results.py  dependencies.py  gql_queries.py  gql_variables.py  graphrag_service.py  helper.py  login_utils.py  main.py  services.py  target_analyzer.py  utils.py
backend/res-immunology-automation/res_immunology_automation/src/target_data/: target_terms.json
(+236 files in other folders)
