[tool.poetry]
name = "res-immunology-automation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "res_immunology_automation"}]

[tool.poetry.dependencies]
python = "^3.11"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[[tool.poetry.source]]
name = "prod"
url = "https://pypi.aganitha.ai/"
priority = "supplemental"


[[tool.poetry.source]]
name = "dev"
url = "https://dev-pypi.aganitha.ai/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
